build_log_verbose.txt
Change Dir: '/Users/suyashjain/Documents/GitHub/OpenGL/build'

Run Build Command(s): /opt/homebrew/bin/cmake -E env VERBOSE=1 /usr/bin/make -f Makefile
/opt/homebrew/bin/cmake -S/Users/suyashjain/Documents/GitHub/OpenGL -B/Users/suyashjain/Documents/GitHub/OpenGL/build --check-build-system CMakeFiles/Makefile.cmake 0
/opt/homebrew/bin/cmake -E cmake_progress_start /Users/suyashjain/Documents/GitHub/OpenGL/build/CMakeFiles /Users/suyashjain/Documents/GitHub/OpenGL/build//CMakeFiles/progress.marks
/Library/Developer/CommandLineTools/usr/bin/make  -f CMakeFiles/Makefile2 all
/Library/Developer/CommandLineTools/usr/bin/make  -f CMakeFiles/OpenGL.dir/build.make CMakeFiles/OpenGL.dir/depend
cd /Users/suyashjain/Documents/GitHub/OpenGL/build && /opt/homebrew/bin/cmake -E cmake_depends "Unix Makefiles" /Users/suyashjain/Documents/GitHub/OpenGL /Users/suyashjain/Documents/GitHub/OpenGL /Users/suyashjain/Documents/GitHub/OpenGL/build /Users/suyashjain/Documents/GitHub/OpenGL/build /Users/suyashjain/Documents/GitHub/OpenGL/build/CMakeFiles/OpenGL.dir/DependInfo.cmake "--color=" OpenGL
Dependencies file "CMakeFiles/OpenGL.dir/src/main.cpp.o.d" is newer than depends file "/Users/suyashjain/Documents/GitHub/OpenGL/build/CMakeFiles/OpenGL.dir/compiler_depend.internal".
Consolidate compiler generated dependencies of target OpenGL
/Library/Developer/CommandLineTools/usr/bin/make  -f CMakeFiles/OpenGL.dir/build.make CMakeFiles/OpenGL.dir/build
[ 16%] Building CXX object CMakeFiles/OpenGL.dir/src/main.cpp.o
/usr/bin/clang++  -I/Users/suyashjain/Documents/GitHub/OpenGL/dependencies -isystem /opt/homebrew/include -iframework /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/System/Library/Frameworks -isystem /opt/homebrew/include/freetype2 -g -arch arm64 -MD -MT CMakeFiles/OpenGL.dir/src/main.cpp.o -MF CMakeFiles/OpenGL.dir/src/main.cpp.o.d -o CMakeFiles/OpenGL.dir/src/main.cpp.o -c /Users/suyashjain/Documents/GitHub/OpenGL/src/main.cpp
In file included from /Users/suyashjain/Documents/GitHub/OpenGL/src/main.cpp:1:
In file included from /Users/suyashjain/Documents/GitHub/OpenGL/src/config.h:6:
/Users/suyashjain/Documents/GitHub/OpenGL/dependencies/glad/glad.h:27:2: error: OpenGL header already included, remove this include, glad already provides it
   27 | #error OpenGL header already included, remove this include, glad already provides it
      |  ^
1 error generated.
make[2]: *** [CMakeFiles/OpenGL.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/OpenGL.dir/all] Error 2
make: *** [all] Error 2

